--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,396 @@
-/* Other rules */
+/* Import */
+@import url("https://fonts.googleapis.com/css2?family=Amiri&family=Lato:wght@300;400;700&display=swap");
+@font-face {
+  font-family: "Quentin";
+  src: url(./assets/fonts/Quentin.otf);
+}
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+:root {
+  --black: #0d0f1b;
+  --white: #f8f8f8;
+  --grey: #b2b2b2;
+  --green: #2c5a41;
+
+  font-family: "Amiri", serif;
+  font-family: "Lato", sans-serif;
+  font-family: "Quentin", sans-serif;
+}
+
+body {
+  font-family: "Lato";
+  background-color: var(--white);
+}
+
+.mobile {
+  display: none;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: clamp(1.625rem, 2.5vw, 2rem);
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 50px 0 25px 0;
+}
+
+p {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  color: var(--grey);
+  font-size: clamp(0.75rem, 2.5vw, 1rem);
+  margin-bottom: 25px;
+}
+
+ul,
+a {
+  list-style: none;
+  text-decoration: none;
+  color: var(--black);
+}
+
+button {
+  text-decoration: none;
+  border: none;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  background: none;
+}
+
+.layout {
+  max-width: 1600px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+@media (max-width: 576px) {
+  .layout .hour-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hour-container .hour-wrapper {
+    margin-bottom: 2em;
+  }
+}
+
+/* Hover button Nav */
+.btn-style {
+  position: relative;
+  cursor: pointer;
+  border: none;
+  background: none;
+  font-family: "Lato", sans-serif;
+  color: var(--black);
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+.btn-style:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: var(--green);
+  transition: width 0.5s ease;
+  -webkit-transition: width 0.5s ease;
+}
+
+.btn-style:hover:after {
+  width: 100%;
+  left: 0;
+  background: var(--green);
+}
+
+/* Navigation */
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-wrapper ul {
+  display: flex;
+  padding: 25px 0;
+}
+
+.nav-wrapper li {
+  margin: 0 0px 0 20px;
+}
+
+.nav-wrapper a {
+  text-decoration: none;
+  font-family: "Lato";
+  text-transform: uppercase;
+  font-size: clamp(8px, 2.5vw, 12px);
+  font-weight: 500;
+}
+
+.btn-reservation a {
+  font-family: "Lato";
+  text-transform: uppercase;
+  font-size: clamp(8px, 2.5vw, 12px);
+  font-weight: 500;
+  color: var(--green);
+  border: 1px solid var(--green);
+  padding: 10px;
+  margin-right: 20px;
+}
+
+.btn-reservation a:hover {
+  font-family: "Lato";
+  text-transform: uppercase;
+  font-size: clamp(8px, 2.5vw, 12px);
+  font-weight: 500;
+  color: var(--white);
+  background-color: var(--green);
+  padding: 10px;
+  margin-right: 20px;
+}
+
+/* Home */
+.home {
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+}
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  height: 100vh;
+}
+
+.background img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
+.logo-text {
+  width: 15%;
+  height: auto;
+  margin-bottom: clamp(0.438rem, 2.5vw, 0.938rem);
+}
+
+.title1 {
+  font-family: "Quentin";
+  font-size: clamp(2rem, 2.5vw, 3.5rem);
+  line-height: clamp(2rem, 2.5vw, 4.25rem);
+  color: var(--green);
+}
+
+.title2 {
+  font-family: "Amiri";
+  font-weight: 300;
+  font-size: clamp(1.875rem, 2.5vw, 4.813rem);
+  letter-spacing: 0.5rem;
+  line-height: clamp(2rem, 2.5vw, 3.75rem);
+  color: var(--black);
+}
+
+.title3 {
+  font-family: "Lato";
+  font-weight: 500;
+  font-size: clamp(0.5rem, 2.5vw, 1rem);
+  letter-spacing: 0.5rem;
+  color: var(--black);
+}
+
+.btn-menu {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-menu a {
+  font-family: "Lato";
+  text-transform: uppercase;
+  color: var(--black);
+  font-size: clamp(8px, 2.5vw, 12px);
+  font-weight: 500;
+  /* border-bottom: 1px solid var(--black); */
+  /* padding: 0.425em; */
+}
+
+/* Menu */
+.buttons-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 3.125em;
+}
+
+.background-menu {
+  background: white;
+  margin: 4.25em;
+  box-shadow: 0 0 3em rgba(0, 0, 0, 0.15);
+  padding: 2em;
+  border-radius: 30px;
+}
+
+.icon-menu {
+  height: 4em;
+}
+
+.title {
+  font-size: 18px;
+}
+
+.product-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-price-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.price {
+  margin-left: 0.4vw;
+}
+
+.quantities span {
+  margin-left: 1.2vw;
+  margin-right: 0.4vw;
+}
+
+.titleCategory {
+  display: block;
+  font-size: 24px;
+  color: var(--green);
+  font-weight: 600;
+}
+
+.description {
+  font-size: 14px;
+  color: var(--grey);
+  text-transform: capitalize;
+}
+
+.quantities {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  box-sizing: border-box;
+}
+
+.button-menu button {
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--white);
+}
+
+.button-menu button.active {
+  border-bottom: 1px solid var(--green);
+}
+
+/* Réservation */
+.reservation-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.informations {
+  display: flex;
+  justify-content: center;
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
+  color: var(--green);
+  margin-bottom: 1.5em;
+}
+
+/* Informations */
+.hour-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.hour-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.title-adresse {
+  display: flex;
+  justify-content: center;
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
+  margin: clamp(10px, 2.5vw, 50px);
+}
+
+.title-day {
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
+  font-size: clamp(0.8rem, 2.5vw, 1rem);
+  text-transform: uppercase;
+}
+
+.title-info {
+  margin: 0.625em;
+}
+
+.title-hour {
+  font-weight: 600;
+  color: var(--green);
+  display: flex;
+  justify-content: center;
+}
+
+.information-contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+/* Slider */
+
+.awssld {
+  --slider-height-percentage: 45% !important;
+  --loader-bar-color: transparent !important;
+}
+
+/* Footer */
+.footer-container {
+  width: 100%;
+  height: 100px;
+  background-color: var(--black);
+  color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
