--- a/src/App.css
+++ b/src/App.css
@@ -81,8 +81,17 @@ button {
     flex-direction: column;
   }
 
+  #menu .background-menu {
+    margin: 3.25em 0;
+    padding: 2em 0.6em;
+  }
+
   .hour-container .hour-wrapper {
     margin-bottom: 2em;
+  }
+
+  span.description {
+    padding: 0 25% 0 0;
   }
 }
 
@@ -117,7 +126,23 @@ button {
   background: var(--green);
 }
 
+.sticky {
+  width: 100%;
+  height: 69px;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  position: fixed;
+  box-shadow: 0 0 3em rgb(0 0 0 / 15%);
+  transition: all 1s ease 0s;
+}
+
 /* Navigation */
+.header {
+  width: 100vw;
+  background-color: var(--white);
+}
+
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -234,7 +259,7 @@ button {
   font-family: "Lato";
   text-transform: uppercase;
   color: var(--black);
-  font-size: clamp(8px, 2.5vw, 12px);
+  font-size: clamp(10px, 2.5vw, 14px);
   font-weight: 500;
   /* border-bottom: 1px solid var(--black); */
   /* padding: 0.425em; */
@@ -256,48 +281,7 @@ button {
 }
 
 .icon-menu {
-  height: 4em;
-}
-
-.title {
-  font-size: 18px;
-}
-
-.product-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.title-price-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.price {
-  margin-left: 0.4vw;
-}
-
-.quantities span {
-  margin-left: 1.2vw;
-  margin-right: 0.4vw;
-}
-
-.titleCategory {
-  display: block;
-  font-size: 24px;
-  color: var(--green);
-  font-weight: 600;
-}
-
-.description {
-  font-size: 14px;
-  color: var(--grey);
-  text-transform: capitalize;
-}
-
-.quantities {
-  display: flex;
-  justify-content: flex-end;
+  height: clamp(3em, 2.5vw, 5em);
 }
 
 .button-menu {
@@ -305,17 +289,83 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 40px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .button-menu button {
   padding-bottom: 10px;
   border-bottom: 1px solid var(--white);
+  font-size: clamp(0.8em, 2.5vw, 1em);
 }
 
 .button-menu button.active {
   border-bottom: 1px solid var(--green);
+}
+
+.container-menu {
+  width: 100%;
+}
+
+.container-menu tbody tr td:first-child {
+  text-align: left;
+}
+
+.container-menu tbody tr td {
+  text-align: center;
+  vertical-align: top;
+}
+
+.title-category {
+  display: block;
+  font-size: 24px;
+  color: var(--green);
+  font-weight: 600;
+}
+
+.title-category:first-child {
+  margin: 0;
+}
+.title-category {
+  margin-top: 2.5vh;
+}
+
+.title {
+  display: block;
+  font-size: clamp(0.8em, 2.5vw, 1em);
+  text-transform: capitalize;
+}
+
+.description {
+  font-size: 14px;
+  font-size: clamp(0.6em, 2.5vw, 0.8em);
+  display: inline-block;
+  color: var(--grey);
+  text-transform: capitalize;
+  padding: 0 50% 0 0;
+}
+
+.quantities {
+  display: flex;
+  justify-content: flex-end;
+  font-size: clamp(0.8em, 2.5vw, 1em);
+  background-color: red;
+}
+
+.price {
+  padding-top: 0.2em;
+  font-size: clamp(0.8em, 2.5vw, 1em);
+}
+
+.price span {
+  padding: 0 8px;
+  font-size: clamp(0.8em, 2.5vw, 1em);
+}
+
+.quantities-line td span {
+  margin-bottom: 0.5em;
+  display: block;
+  font-size: clamp(0.8em, 2.5vw, 1em);
 }
 
 /* Réservation */
