--- a/src/App.css
+++ b/src/App.css
@@ -231,6 +231,7 @@ button {
   font-size: clamp(1.4rem, 2.5vw, 3.5rem);
   line-height: clamp(2rem, 2.5vw, 4.25rem);
   color: var(--green);
+  text-align: center;
 }
 
 .title2 {
