--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,7 @@ button {
   letter-spacing: 0.5rem;
   line-height: clamp(2rem, 2.5vw, 3.75rem);
   color: var(--black);
+  padding-top: clamp(1rem, 2.5vw, 1.9rem);
 }
 
 .title3 {
@@ -387,7 +388,7 @@ button {
 /* Informations */
 .hour-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .hour-wrapper {
@@ -395,6 +396,7 @@ button {
   flex-direction: column;
   align-items: center;
   margin-bottom: 50px;
+  margin-left: 30px;
 }
 .title-adresse {
   display: flex;
@@ -444,4 +446,5 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: clamp(10px, 2.5vw, 14px);
 }
